2008-10-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-string): Do not ungrab keyboard if
	it's already grabbed.

	* src/clfswm-internal.lisp (display-frame-info): Use configurable
	colors and fix a bug with background.
	(display-frame-info): Set window background when displaying info.

2008-10-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (my-character->keysyms): Use a macro to avoid
	warning with clisp/new-clx.

2008-10-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (jump-to-slot): Prevent to jump on a
	deleted child.

2008-09-23  Philippe Brochard  <pbrochard@common-lisp.net>
	* *: **** Release 0809 ****

2008-09-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (ensure-unique-name): New function and menu
	entry.
	(ensure-unique-number): New function and menu entry.

2008-09-22  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (named-frame-nw-hook): New new window
	hook: open the next window in a named frame.
	(numbered-frame-nw-hook): New new window hook: open the next
	window in a numbered frame.

	* src/clfswm-query.lisp (query-string): Grab the keyboard in all
	cases. So query-string can be called even in the main mode.

	* src/clfswm-internal.lisp (show-all-children): Do not raise a
	child by default => far less flickering.

2008-09-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp: Bind "t" to tile-current-frame.

	* src/menu-def.lisp: Change key binding for the CLFSWM menu
	entry.

	* src/xlib-util.lisp (xgrab-pointer): Handle the case where cursor
	is nil. (workaround on some CLX implementation).

2008-09-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Add a menu to set a focus policy for all
	frames.

	* src/clfswm-util.lisp (set-focus-policy-generic-for-all)
	(all-frames-set-*-focus-policy): Set a focus policy for all
	frames.
