@@ -1,3 +1,8 @@
+2008-10-08  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-util.lisp (show-standard-menu): Display the standard
+	menu from the 'update-menus' command.
+
 2008-10-07  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-query.lisp (query-string): Do not ungrab keyboard if
